--- a/index.html
+++ b/index.html
@@ -7,12 +7,35 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/style.min.css">
     <title>GPUSTOCK - HOME</title>
 </head>
 <body>
-    
-
+    <!-- NAVBAR STARTS HERE -->
+    <nav class="navbar container">
+        <div class="navbar__hamburger purple">
+            <i class="fa-sharp fa-solid fa-bars"></i>
+        </div>
+        <div class="navbar__logo">
+            <span class="purple">gpu</span>stock
+        </div>
+        <ul class="navbar__links">
+            <li class="navbar__link active">
+                <a href="#">Home</a>
+            </li>
+            <li class="navbar__link">
+                <a href="#">Latest</a>
+            </li>
+            <li class="navbar__link">
+                <a href="#">Categories</a>
+            </li>
+            <li class="navbar__link btn">
+                <a href="#">Contacts</a>
+            </li>
+        </ul>
+    </nav>
+    <!-- NAVBAR ENDS HERE -->
     <script src="./js/app.js"></script>
 </body>
 </html>
