nav btn color fixed

--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
             <i class="fa-sharp fa-solid fa-bars"></i>
         </div>
         <div class="navbar__logo">
-            <span class="purple">gpu</span>stock
+           <a href="index.html"><span class="purple">gpu</span>stock</a>
         </div>
         <ul class="navbar__links">
             <li class="navbar__link active">
-                <a href="#">Home</a>
+                <a href="index.html">Home</a>
             </li>
             <li class="navbar__link">
                 <a href="#">Latest</a>
